methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:31: error: '=' expected but '(' found.
    forward()
           ^MethodsPicture:32: error: illegal start of simple expression
    forward()
^